--- a/mocha/WebContent/index.html
+++ b/mocha/WebContent/index.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-이대현 바보
+ <a href="product_list_m">상품 리스트</a><br/>
+ <a href="product_list_price_desc_m">상품 가격 높은 순</a><br/>
+ <a href="product_list_manager_m">관리자 상품관리</a><br/>
+ 
 </body>
 </html>
